Fixing header on mobile devices and smaller screens

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,24 +23,20 @@ img{
 
 .text-block {
     position: absolute;
-    left: 20%;
-    bottom: 20%;
+    text-align: center;
+    left: 10%;
+    bottom: 10%;
     background-color: rgba(0, 0, 0, 0.603);
-    background-attachment: scroll;
     color: white;
     padding-left: 1.5em;
     padding-right: 1.5em;
     font-size: 1.8em;
-    line-height: 0em;
-    white-space: nowrap;
 
     @media #{$mobile-width}{
         background-position: center;
-        overflow: hidden;
-        overflow-wrap: break-word;
         font-size: .95em;
-        left: 0%;
-        bottom: 5%;
+        left: 2%;
+        bottom: 2%;
     }
 }
 
@@ -53,7 +49,6 @@ img{
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
-    //display: block;
     width: auto;
     max-width: 100%;
     height: 950px;
